// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service/LoggerService error Trims down the axios error: EMPTY 1`] = `
Object {
  "config": Object {
    "method": "get",
    "url": "http://localhost:9999",
  },
  "message": "some-message",
  "response": Object {
    "data": undefined,
    "status": undefined,
  },
}
`;

exports[`Service/LoggerService error Trims down the axios error: HTTP_417 1`] = `
Object {
  "config": Object {
    "method": "get",
    "url": "http://localhost:9999",
  },
  "message": "some-message",
  "response": Object {
    "data": Object {
      "data": 1,
    },
    "status": 417,
  },
}
`;

exports[`Service/LoggerService error Trims down the axios error: UNDEFINED 1`] = `
Object {
  "config": Object {
    "method": "get",
    "url": "http://localhost:9999",
  },
  "message": "some-message",
}
`;

exports[`Service/LoggerService info Trims down the axios error: EMPTY 1`] = `
Object {
  "config": Object {
    "method": "get",
    "url": "http://localhost:9999",
  },
  "message": "some-message",
  "response": Object {
    "data": undefined,
    "status": undefined,
  },
}
`;

exports[`Service/LoggerService info Trims down the axios error: HTTP_417 1`] = `
Object {
  "config": Object {
    "method": "get",
    "url": "http://localhost:9999",
  },
  "message": "some-message",
  "response": Object {
    "data": Object {
      "data": 1,
    },
    "status": 417,
  },
}
`;

exports[`Service/LoggerService info Trims down the axios error: UNDEFINED 1`] = `
Object {
  "config": Object {
    "method": "get",
    "url": "http://localhost:9999",
  },
  "message": "some-message",
}
`;
